platform/ai/k8s/patch-test-connection.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: ollama-test-connection
  namespace: ai
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: feature.node.kubernetes.io/pci-0300_10de.present
                operator: In
                values:
                  - "true"
  containers:
    - name: wget
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        privileged: false
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
        seccompProfile:
          type: RuntimeDefault
