platform/ai/k8s/ui-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kgateway-http-route
  namespace: ai
spec:
  parentRefs:
  - name: homelab-internal-gateway
  hostnames:
  - "ai.homelab.internal"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kagent-ui
      kind: Service
      port: 8080
